--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/wordgames-db
+spring.datasource.url=jdbc:mysql://localhost:3306/wordgames
 spring.datasource.username=root
 spring.datasource.password=pestillo
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
